--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="app_name">Yi_Jia_Shuo_Client</string>
+	<string name="app_name">宜家说</string>
 </resources>
